# react-native-nitro-orientation-locker

./: .gitignore  .npmignore  LICENSE  NitroOrientationLocker.podspec  PUBLISHING.md  README.md  nitro.json  package-lock.json  package.json  tsconfig.build.json  tsconfig.json
.github/workflows/: ci.yml  publish.yml
android/: CMakeLists.txt  build.gradle  gradle.properties
android/src/main/java/com/margelo/nitro/orientationlocker/: HybridOrientationLocker.kt
ios/: HybridOrientationLocker.swift  OrientationGate.swift
src/: OrientationLocker.nitro.ts  OrientationLockerProvider.tsx  index.ts
